--- a/.github/workflows/test-application.yaml
+++ b/.github/workflows/test-application.yaml
@@ -60,6 +60,13 @@ jobs:
                       symfony-version: '^5.0'
                       elasticsearch-package-constraint: '^7.0'
 
+                    - php-version: '8.1'
+                      job-name-prefix: 'Allow to fail: '
+                      elasticsearch-version: '7.11.1'
+                      lint: true
+                      symfony-version: '^6.0'
+                      elasticsearch-package-constraint: '^7.0'
+
         services:
             elasticsearch:
                 image: docker.elastic.co/elasticsearch/elasticsearch:${{ matrix.elasticsearch-version }}
