--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "symfony/twig-bundle": "^2.8|^3.4|^4|^5|^6",
         "symfony/serializer": "^2.8|^3.4|^4|^5|^6",
         "symfony/yaml": "^2.8|^3.4|^4|^5|^6",
-        "symfony/phpunit-bridge": "^5.1",
+        "symfony/phpunit-bridge": "^5.1|^6",
         "symfony/dependency-injection": "^2.8|^3.4|^4|^5|^6",
         "symfony/validator": "^2.8|^3.4|^4|^5|^6",
         "symfony/options-resolver": "^2.8|^3.4|^4|^5|^6"
