--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "doctrine/cache": "~1.4",
         "doctrine/collections": "~1.4",
         "monolog/monolog": "^1.10 || ^2.0",
-        "handcraftedinthealps/elasticsearch-dsl": "^5.0.7.1|^6.2.0.1|^7.2.0.1"
+        "handcraftedinthealps/elasticsearch-dsl": "^5.0.7.1|^6.2.0.1|^7.2.0.1",
+        "symfony/event-dispatcher": "^2.8|^3.0|^4|^5|^6"
     },
     "require-dev": {
         "mikey179/vfsstream": "~1.4",
