--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "php": "^5.6|^7.0|^8.0",
+        "php": "^7.0|^8.0",
         "symfony/framework-bundle": "^2.8|^3.0|^4|^5|^6",
         "symfony/console": "^2.8|^3.0|^4|^5|^6",
         "symfony/stopwatch": "^2.8|^3.0|^4|^5|^6",
