--- a/.github/workflows/test-application.yaml
+++ b/.github/workflows/test-application.yaml
@@ -19,26 +19,31 @@ jobs:
                     - php-version: '7.2'
                       elasticsearch-version: '5.6.14'
                       lint: false
-                      symfony-version: '^3.4'
+                      symfony-version: '^2.8'
                       elasticsearch-package-constraint: '^5.0'
+                      env:
+                          SYMFONY_PHPUNIT_VERSION: '7.5'
 
                     - php-version: '7.2'
                       elasticsearch-version: '5.6.14'
                       lint: false
                       symfony-version: '^3.4'
                       elasticsearch-package-constraint: '^5.0'
+                      env: {}
 
                     - php-version: '7.3'
                       elasticsearch-version: '5.6.14'
                       lint: false
                       symfony-version: '^4.4'
                       elasticsearch-package-constraint: '^5.0'
+                      env: {}
 
                     - php-version: '7.4'
                       elasticsearch-version: '5.6.14'
                       lint: true
                       symfony-version: '^5.0'
                       elasticsearch-package-constraint: '^5.0'
+                      env: {}
 
                     - php-version: '7.4'
                       job-name-prefix: 'Allow to fail: '
@@ -46,6 +51,7 @@ jobs:
                       lint: true
                       symfony-version: '^5.0'
                       elasticsearch-package-constraint: '^5.0'
+                      env: {}
 
                     - php-version: '8.0'
                       job-name-prefix: 'Allow to fail: '
@@ -53,6 +59,7 @@ jobs:
                       lint: true
                       symfony-version: '^5.0'
                       elasticsearch-package-constraint: '^7.0'
+                      env: {}
 
                     - php-version: '8.1'
                       job-name-prefix: 'Allow to fail: '
@@ -60,6 +67,7 @@ jobs:
                       lint: true
                       symfony-version: '^6.0'
                       elasticsearch-package-constraint: '^7.0'
+                      env: {}
 
         services:
             elasticsearch:
@@ -108,3 +116,4 @@ jobs:
 
             - name: Run tests
               run: vendor/bin/simple-phpunit
+              env: ${{ matrix.env }}
